Add some documentation and update the readme, adjust the tests and add endpoint for stats
